apps/mongo-express/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: &PODNAME mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            pod: *PODNAME
    template:
        metadata:
            labels:
                pod: *PODNAME
        spec:
            containers:
                - image: mongo-express
                  name: mongo-express
                  ports:
                      - name: http
                        containerPort: 8081
                  resources:
                      limits:
                          cpu: "1"
                          memory: "512M"
                      requests:
                          cpu: "0.01"
                          memory: "128M"
