apps/mongo-express/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: mongo-express
spec:
    parentRefs:
        - name: wac-hospital-gateway
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /mongo-express
          backendRefs:
              - group: ""
                kind: Service
                name: mongo-express
                port: 8081
